Bento - Bug Gap

--- a/src/Css/style.css
+++ b/src/Css/style.css
@@ -321,7 +321,7 @@
   }
 
   .Container {
-    margin-top: 10px;
+    margin-top: 2rem;
     gap: 2rem;
   }
 
